fix ui bugs (#145)
* fix breadcrumbs truncation

* fix skillModal textarea

* fix assistantModal layout

* upd translations

* small fixes

--- a/services/frontend/src/components/Modals/AssistantModal/AssistantModal.module.scss
+++ b/services/frontend/src/components/Modals/AssistantModal/AssistantModal.module.scss
@@ -1,4 +1,4 @@
-.assistantModal {
+.form {
   min-width: 582px;
   max-width: 100%;
   max-height: 100%;
@@ -54,5 +54,19 @@
       color: rgba(0, 0, 0, 0.7) !important;
       font-weight: 400;
     }
+  }
+}
+
+@media (max-height: 800px) {
+  .modal {
+    max-height: 90% !important;
+  }
+
+  .assistantModal {
+    gap: 6px;
+  }
+
+  .btns {
+    margin-top: 10px;
   }
 }
